[gd_scene load_steps=5 format=3 uid="uid://22gamdakaxrn"]

[ext_resource type="Texture2D" uid="uid://cu3ucp0ocryit" path="res://assets/objects/Pillar_01.png" id="1_01k2u"]
[ext_resource type="Script" path="res://scripts/pressure_plate.gd" id="1_05li4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l1vum"]
size = Vector2(38, 11)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_hab15"]
properties/0/path = NodePath(".:is_pressed")
properties/0/spawn = true
properties/0/replication_mode = 2

[node name="PressurePlate" type="Node2D"]
script = ExtResource("1_05li4")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_l1vum")

[node name="PlateUp" type="Sprite2D" parent="."]
position = Vector2(0, -6)
scale = Vector2(0.2, 0.3)
texture = ExtResource("1_01k2u")

[node name="PlateDown" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.2, 0.3)
texture = ExtResource("1_01k2u")

[node name="PlateSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_hab15")

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_player_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_player_exited"]
[connection signal="delta_synchronized" from="PlateSynchronizer" to="." method="_on_plate_synchronizer_synchronized"]
